--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,3 +1,25 @@
 spring.application.name=api-gateway
 server.port=9000
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8181/realms/spring_microservices_security_realm
+
+# Actuator endpoints
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+management.health.circuitbreakers.enabled=true
+
+#Resilience4j properties
+resilience4j.circuitbreaker.configs.default.registerHealthIndicator=true
+resilience4j.circuitbreaker.configs.default.slidingWindowType=COUNT_BASED
+resilience4j.circuitbreaker.configs.default.slidingWindowSize=10
+resilience4j.circuitbreaker.configs.default.waitDurationInOpenState=5s
+resilience4j.circuitbreaker.configs.default.permittedNumberOfCallsInHalfOpenState=3
+resilience4j.circuitbreaker.configs.default.failureRateThreshold=50
+resilience4j.circuitbreaker.configs.default.automaticTransitionFromOpenToHalfOpenEnabled=true
+resilience4j.circuitbreaker.configs.default.minimumNumberOfCalls=5
+
+#Resilience4j timeout properties
+resilience4j.timeout.instances.default.timeout-duration=2s
+
+#Resilience4j retry properties
+resilience4j.retry.configs.default.max-attempts=3
+resilience4j.retry.configs.default.wait-duration=2s
