--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -5,3 +5,25 @@ spring.datasource.password=mysql
 spring.jpa.hibernate.ddl-auto=none
 server.port = 8081
 inventory.url = http://localhost:8082
+
+# Actuator endpoints
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+management.health.circuitbreakers.enabled=true
+
+#Resilience4j properties
+resilience4j.circuitbreaker.instance.inventory.registerHealthIndicator=true
+resilience4j.circuitbreaker.instance.inventory.slidingWindowType=COUNT_BASED
+resilience4j.circuitbreaker.instance.inventory.slidingWindowSize=10
+resilience4j.circuitbreaker.instance.inventory.waitDurationInOpenState=5s
+resilience4j.circuitbreaker.instance.inventory.permittedNumberOfCallsInHalfOpenState=3
+resilience4j.circuitbreaker.instance.inventory.failureRateThreshold=50
+resilience4j.circuitbreaker.instance.inventory.automaticTransitionFromOpenToHalfOpenEnabled=true
+resilience4j.circuitbreaker.instance.inventory.minimumNumberOfCalls=5
+
+#Resilience4j timeout properties
+resilience4j.timeout.instances.default.timeout-duration=2s
+
+#Resilience4j retry properties
+resilience4j.retry.instance.inventory.max-attempts=3
+resilience4j.retry.instance.inventory.wait-duration=2s
