--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -27,3 +27,12 @@ resilience4j.timeout.instances.default.timeout-duration=2s
 #Resilience4j retry properties
 resilience4j.retry.instance.inventory.max-attempts=3
 resilience4j.retry.instance.inventory.wait-duration=2s
+
+
+#KAfka properties
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.template.default-topic=order-placed
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+#spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.producer.value-serializer=io.confluent.kafka.serializers.KafkaAvroSerializer
+spring.kafka.producer.properties.schema.registry.url=http://localhost:8085
