--- a/api-gateway/docker/prometheus/prometheus.yml
+++ b/api-gateway/docker/prometheus/prometheus.yml
@@ -3,9 +3,16 @@ global:
   evaluation_interval: 2s
 
 scrape_configs:
-  - job_name: 'prometheus'
+  #- job_name: 'prometheus'
+  #  static_configs:
+  #    - targets: ['prometheus:9090']
+
+  - job_name: 'api-gateway'
+    metrics_path: '/actuator/prometheus'
     static_configs:
-      - targets: ['prometheus:9090']
+        - targets: ['host.docker.internal:9000']
+          labels:
+          application: 'API Gateway'
 
   - job_name: 'product-service'
     metrics_path: '/actuator/prometheus'
