added code for order, notification, inventory service observability

--- a/notification-service/src/main/resources/application.properties
+++ b/notification-service/src/main/resources/application.properties
@@ -3,8 +3,8 @@ server.port=8083
 #Mail properties
 spring.mail.host=sandbox.smtp.mailtrap.io
 spring.mail.port=587
-spring.mail.username=49804887538666
-spring.mail.password=92df13ea7eb755
+spring.mail.username=33444f707a66eb
+spring.mail.password=c6dabe0efd8d90
 
 #Kafka consumer
 spring.kafka.bootstrap-servers=localhost:9092
@@ -19,3 +19,10 @@ spring.kafka.consumer.value-deserializer=io.confluent.kafka.serializers.KafkaAvr
 spring.kafka.consumer.properties.schema.registry.url=http://localhost:8085
 spring.kafka.consumer.properties.specific.avro.reader=true
 
+management.endpoints.web.exposure.include=health, info, metrics, prometheus
+management.metrics.distribution.percentiles-histogram.http.server.requests=true
+management.observations.key-values.application=notification-service
+
+management.tracing.sampling.probability=1.0
+
+loki.url = http://localhost:3100/loki/api/v1/push
